--- a/public/index.css
+++ b/public/index.css
@@ -3,8 +3,10 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    height: auto;
-    width: auto;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     font-family: 'Lato', sans-serif;
 }
 
@@ -77,6 +79,35 @@ a:hover::before {
     transform: scaleX(1);
 }
 
+.logo {
+    float: none;
+    position: absolute;
+    display: block;
+    left: 708px;
+    top: 270px;
+    height: auto;
+}
+
+.arctic-h1 {
+    float:none;
+    position: absolute;
+    display: block;
+    left: 660px;
+    top: 500px;
+    color: white;
+    font-size: 2em;
+}
+
+.rust-h1 {
+    float:none;
+    position: absolute;
+    display: block;
+    left: 900px;
+    top: 500px;
+    color: #74c0ff;
+    font-size: 2em;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -99,7 +130,7 @@ a:hover::before {
     text-align: center;
     text-decoration: none;
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1em;
     cursor: pointer;
     border-radius: 2em;
     transition: all 0.15s;
@@ -115,7 +146,7 @@ a:hover::before {
     text-align: center;
     text-decoration: none;
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1em;
     cursor: pointer;
     border-radius: 2em;
     transition: all 0.15s;
@@ -134,7 +165,7 @@ a:hover::before {
 .discordbutton {
     float: none;
     top: 635px;
-    left: 720px;
+    left: 730px;
     position: absolute;
 }
 
@@ -143,4 +174,35 @@ a:hover::before {
     top: 635px;
     left: 880px;
     position: absolute;
+}
+
+.server-container {
+    display: block;
+    position: absolute;
+    background: #0b1a23;
+    top: 1015px;
+    height: 60vh;
+    width: 100%;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
+.servers {
+    background-color: inherit;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    left: 800px;
+    top: 100px;
+    color: white;
+    font-size: 3em;
+}
+
+@media (max-width: 800px) {
+    .servers {
+        flex-direction: column;
+    }
 }
