--- a/public/index.css
+++ b/public/index.css
@@ -169,7 +169,7 @@ a:hover::before {
     position: absolute;
 }
 
-.vipbutton {
+.steambutton {
     float: none;
     top: 635px;
     left: 880px;
