--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-image: url('/img/rust-background.png');
     background-repeat: no-repeat;
@@ -20,14 +24,11 @@ body::-webkit-scrollbar {
 }
 
 .header a {
-    float: left;
     color: #ddd;
+    padding: 10px;
     text-align: center;
-    padding: 12px;
     text-decoration: none;
     font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
 }
 
 .header a.active {
@@ -35,12 +36,10 @@ body::-webkit-scrollbar {
 }
 
 .header-center {
-    float: left;
-    position: -webkit-sticky;
-    position: sticky;
-    position: relative;
-    top: 0%;
-    left: 41.2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 a {
@@ -73,48 +72,34 @@ a:hover::before {
 
 .main-section {
     display: flex;
-    position: relative;
-    top: 47%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo {
-    float: left;
-    position: relative;
+    position: absolute;
+    top: 130px;
     height: auto;
     width: 300px;
-    bottom: 75%;
-    left: 34.5%;
 }
 
-.arctic-h1 {
-    float: left;
-    position: relative;
+.arcticrust {
+    position: absolute;
+    top: 480px;
     color: white;
-    left: 21.5%;
     font-size: 2em;
-}
-
-.rust-h1 {
-    float: left;
-    position: relative;
-    color: #74c0ff;
-    left: 21.5%;
-    font-size: 2em;
-}
-
-* {
-    box-sizing: border-box;
 }
 
 .quicklinks {
-    position: relative;
-    overflow: hidden;
     display: flex;
     flex-direction: row;
-    margin-left: -0.5em;
-    margin-bottom: -0.5em;
-    top: 30%;
-    left: 42%;
+    justify-content: center;
+    align-items: center;
+}
+
+.column1 {
+    padding: 20px;
 }
 
 .button1 {
@@ -136,7 +121,7 @@ a:hover::before {
 .button2 {
     display: inline-block;
     background-color: inherit;
-    padding: 0.1em 2.2em;
+    padding: 0.1em 1.5em;
     box-sizing: border-box;
     border: 0.05em solid #74c0ff;
     color: #74c0ff;
@@ -159,42 +144,31 @@ a:hover::before {
     background-color: #74c0ff;
 }
 
-.discordbutton {
-    position: relative;
-    float: left;
+.discordbutton{
 }
 
-.steambutton {
-    position: relative;
-    float: left;
-    left: 20%;
-}
+.steambutton{
+}    
+
 
 .server-container {
-    display: block;
-    position: relative;
+    position: absolute;
     background: #0b1a23;
     background-position: center;
-    top: 65%;
-    height: 60vh;
+    top: 1000px;
+    height: 65vh;
     width: 100%;
-    right: 0;
-    left: 0;
-    bottom: 0;
-}
-
-.servers {
-    background-color: inherit;
-    display: block;
-    text-align: center;
-    color: white;
-    font-size: 1em;
-    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
 .servers-title {
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    left: 43.5%;
     top: 0px;
     color:#74c0ff;
     font-size: 1.2em;
@@ -202,87 +176,36 @@ a:hover::before {
 
 .servers-ls {
     position: absolute;
-    left: 46%;
-    top: 55px;
+    top: 50px;
     color: white;
     font-size: 1.20em;
 }
 
-.server1 {
-    position: absolute;
-    border: 1px solid;
-    border-color: #74c0ff;
+.server-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.servers {
+    background-color: inherit;
+    font-size: 1em;
+    border: 1px #74c0ff solid;
     border-radius: 25px;
-    color: white;
-    top: 170px;
-    left: 40%;
-    height: 300px;
+    height: 400px;
     width: 300px;
-    font-size: 1em;
 }
 
 .server1 {
-    color:#74c0ff;
-}
-
-.server1-h1 {
-    font-size: 1em;
+    color: white;
+    text-align: center;
 }
 
 .server1-status {
-    position: absolute;
-    color: green;
-    left: 24%;
-    top: 70px;
-    font-size: 1em;
-}
-
-.server1-players {
-    position: absolute;
-    color: white;
-    left: 43%;
-    top: 70px;
-    font-size: 1em;
-}
-
-.server1-ip {
-    position: absolute;
-    color: white;
-    left: 15%;
-    top: 95px;
-    font-size: 1em;
-}
-
-.server1-map {
-    position: absolute;
-    color: white;
-    left: 20%;
-    top: 120px;
-    font-size: 1em;
-}
-
-.server1-ms {
-    position: absolute;
-    color: white;
-    left: 33%;
-    top: 145px;
-    font-size: 1em;
-}
-
-.server1-wp {
-    position: absolute;
-    color: white;
-    left: 6%;
-    top: 167px;
-    font-size: 1em;
-}
-
-.server1-rating {
-    position: absolute;
-    color: white;
-    left: 40%;
-    top: 190px;
-    font-size: 1em;
+    text-align: center;
+    color: #31f531;
 }
 
 .s1-btn{
@@ -302,9 +225,6 @@ a:hover::before {
 }
 
 .server1-btn {
-    position: absolute;
-    top: 250px;
-    left: 100px;
 }
 
 .s1-btn:hover {
@@ -314,21 +234,23 @@ a:hover::before {
 
 .footer {
     display: flex;
-    position: relative;
+    flex-direction: row;
+    text-align: center;
     color: #ddd;
-    top: 60%;
 }
 
 .copyright {
     position: absolute;
-    left: 1%;
+    top: 1590px;
+    left: 15px;
     font-size: 0.8em;
 }
 
 .policy-btn {
     position: absolute;
+    top: 1590px;
     padding-top: 10px;
-    left: 94%;
+    left: 1700px;
     color: #ddd;
 }
 
@@ -341,208 +263,3 @@ a:hover::before {
     cursor: pointer;
     color: #ddd;
 }
-
-/* Responsive */
-
-@media only screen and (max-width: 768px) {
-    body {
-        background-image: url('/img/rust-background.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        position: relative;
-        height: 100vh;
-        width: 1vw;
-    }
-
-    .header a {
-        display: flex;
-        flex-direction: row;
-        font-size: 16px;
-    }
-    .header-center {
-        top: 0px;
-        left: 2700%;
-        display: flex;
-        flex-direction: row;
-    }
-
-    a::before {
-        position: absolute;
-        top: 40px;
-    }
-
-    .logo {
-        position: relative;
-        display: flex;
-        left: 40%;
-        top: 115px;
-        width: 50vw;
-        height: auto;
-    }
-
-    .arctic-h1 {
-        float: left;
-        position: relative;
-        display: flex;
-        left: 2300%;
-        top: 100%;
-        color: white;
-        font-size: 3.6vw;
-    }
-    
-    .rust-h1 {
-        float: left;
-        position: relative;
-        display: block;
-        left: 5000%;
-        top: 74px;
-        color: #74c0ff;
-        font-size: 3.6vw;
-    }
-
-    .button1 {
-        display: inline-block;
-        background-color: inherit;
-        padding: 0.1em 1em;
-        box-sizing: border-box;
-        border: 0.05em solid #74c0ff;
-        color: #74c0ff;
-        text-align: center;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 0.5em;
-        cursor: pointer;
-        border-radius: 2em;
-        transition: all 0.15s;
-    }
-
-    .button2 {
-        display: inline-block;
-        background-color: inherit;
-        padding: 0.1em 2.2em;
-        box-sizing: border-box;
-        border: 0.05em solid #74c0ff;
-        color: #74c0ff;
-        text-align: center;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 0.5em;
-        cursor: pointer;
-        border-radius: 2em;
-        transition: all 0.15s;
-    }
-
-    .discordbutton {
-        float: none;
-        top: 65%;
-        left: 80%;
-        position: absolute;
-    }
-    
-    .steambutton {
-        float: none;
-        top: 65%;
-        left: 48%;
-        position: absolute;
-    }
-
-    .server-container {
-        display: flex;
-        position: absolute;
-        background: #0b1a23;
-        top: 100%;
-        height: 70vh;
-        width: 97.1vw;
-        right: 0;
-        left: 0;
-        bottom: 0;
-    }
-
-    .servers {
-        flex-direction: column;
-    }
-
-    .servers-title {
-        position: absolute;
-        left: 35%;
-        top: 0px;
-        color:#74c0ff;
-        font-size: 1em;
-    }
-
-    .servers-ls {
-        position: absolute;
-        left: 41%;
-        top: 7%;
-        color: white;
-        font-size: 1em;
-    }
-
-    .server1 {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        border: 1px solid;
-        border-color: #74c0ff;
-        border-radius: 25px;
-        color: #74c0ff;
-        top: 120px;
-        left: 100px;
-        height: 400px;
-        width: 300px;
-        font-size: 1em;
-    }
-
-    .server1-status {
-        position: absolute;
-        color: green;
-        left: 25%;
-        top: 18%;
-        font-size: 1em;
-    }
-
-    .server1-players {
-        position: absolute;
-        color: white;
-        left: 43%;
-        top: 18%;
-        font-size: 1em;
-    }
-
-    .server1-ip {
-        position: absolute;
-        color: white;
-        left: 15%;
-        top: 25%;
-        font-size: 1em;
-    }
-
-    .server1-ms {
-        position: absolute;
-        color: white;
-        left: 100px;
-        top: 145px;
-        font-size: 1em;
-    }
-
-    .server1-wp {
-        position: absolute;
-        color: white;
-        left: 12px;
-        top: 170px;
-        font-size: 1em;
-    }
-
-    .server1-btn {
-        position: absolute;
-        top: 340px;
-        left: 100px;
-    }
-
-    .footer {
-        size: 0.5em;
-    }
-}
-
-
