--- a/public/css/index.css
+++ b/public/css/index.css
@@ -85,8 +85,8 @@ a:hover::before {
 }
 
 .arcticrust {
-    position: absolute;
-    top: 480px;
+    position: relative;
+    top: 450px;
     color: white;
     font-size: 2em;
 }
@@ -94,8 +94,10 @@ a:hover::before {
 .quicklinks {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 280px;
 }
 
 .column1 {
@@ -143,13 +145,6 @@ a:hover::before {
     color: white;
     background-color: #74c0ff;
 }
-
-.discordbutton{
-}
-
-.steambutton{
-}    
-
 
 .server-container {
     position: absolute;
