--- a/public/css/index.css
+++ b/public/css/index.css
@@ -165,7 +165,7 @@ a:hover::before {
     position: absolute;
     background: #0b1a23;
     background-position: center;
-    top: 1000px;
+    top: 100%;
     height: 65vh;
     width: 100%;
     display: flex;
@@ -234,9 +234,6 @@ a:hover::before {
     transition: all 0.15s;
 }
 
-.server1-btn {
-}
-
 .s1-btn:hover {
     color: white;
     background-color: #74c0ff;
@@ -251,14 +248,14 @@ a:hover::before {
 
 .copyright {
     position: absolute;
-    top: 1590px;
+    top: 160%;
     left: 15px;
     font-size: 0.8em;
 }
 
 .policy-btn {
     position: absolute;
-    top: 1590px;
+    top: 160%;
     right: 15px;
     padding-top: 10px;
     color: #ddd;
