--- a/public/index.css
+++ b/public/index.css
@@ -119,6 +119,10 @@ a:hover::before {
     padding: 20px;
 }
 
+.column2 {
+    padding: 20px;
+}
+
 .button1 {
     display: inline-block;
     background-color: inherit;
